SNAP-3539 - continued